--- a/src/app/Event-App/event-app.component.html
+++ b/src/app/Event-App/event-app.component.html
@@ -1,2 +1,4 @@
-<h1>Hello World</h1>
-<img src="./../../assets/images/basic-shield.png">
+<div class="container">
+    <app-nav-bar></app-nav-bar>
+    <app-event-list></app-event-list>
+</div>
