--- a/src/app/Event-list/event-list.component.html
+++ b/src/app/Event-list/event-list.component.html
@@ -1,5 +1,10 @@
 <div>
     <h1> Upcoming Angular Events</h1>
     <hr>
-    <app-event-thumbnail [eventFromList]="event"></app-event-thumbnail>
+    <div class="row">
+        <div class="col-md-5" *ngFor="let event of events">
+        <app-event-thumbnail [eventFromList]="event"></app-event-thumbnail>
+    </div>
+    </div>
+    
 </div>
