--- a/src/app/event-thumbnail/event-thumbnail.component.css
+++ b/src/app/event-thumbnail/event-thumbnail.component.css
@@ -1,3 +1,15 @@
 .thumbnail{
     min-height: 210px;
 }
+.green{
+    color: green !important;
+}
+.bold{
+    font-weight: bolder;
+}
+.red{
+    color: red !important;
+}
+.yellow{
+    color: yellow !important;
+}
