--- a/src/app/event-thumbnail/event-thumbnail.component.html
+++ b/src/app/event-thumbnail/event-thumbnail.component.html
@@ -1,7 +1,12 @@
 <div class="well hoverwell thumbnail">
-    <h2>{{eventFromList.name}}</h2>
-    <div>Date: {{eventFromList.date}}</div>
-    <div> Time: {{eventFromList.time}}</div>
-    <div> Price: $ {{eventFromList.price}}</div>
-    <div> Location:  {{eventFromList.location.address}} {{eventFromList.location.city}}, {{eventFromList.location.country}}</div>
+    <h2>{{eventFromList?.name}}</h2>
+    <div>Date: {{eventFromList?.date}}</div>
+    <div [ngClass]="getStartTimeClass()" [ngSwitch] = "eventFromList?.time"> Time: {{eventFromList?.time}} 
+        <span *ngSwitchCase="'8:00 am'">(Early Time)</span>
+        <span *ngSwitchCase="'10:00 am'">(Late Time)</span>
+        <span *ngSwitchDefault>(Normal Time)</span>
+    </div>
+    <div> Price: $ {{eventFromList?.price}}</div>
+    <div *ngIf="eventFromList?.location"> Location:  {{eventFromList.location.address}} {{eventFromList.location.city}}, {{eventFromList.location.country}}</div>
+    <div *ngIf="eventFromList?.OnlineUrl"> OnlineUrl : {{eventFromList.OnlineUrl}}</div>
 </div>
