added new components  for new event, event details and added routes for the componets.

--- a/src/app/event-thumbnail/event-thumbnail.component.html
+++ b/src/app/event-thumbnail/event-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="well hoverwell thumbnail">
+<div [routerLink]="['/events',eventFromList.id]" class="well hoverwell thumbnail">
     <h2>{{eventFromList?.name}}</h2>
     <div>Date: {{eventFromList?.date}}</div>
     <div [ngClass]="getStartTimeClass()" [ngSwitch] = "eventFromList?.time"> Time: {{eventFromList?.time}} 
