--- a/src/app/Event-App/event-app.component.html
+++ b/src/app/Event-App/event-app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <app-nav-bar></app-nav-bar>
-    <app-event-list></app-event-list>
+    <router-outlet></router-outlet>
 </div>
