--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -25,7 +25,11 @@
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
             <li>
-              <a [routerLink]="['/user/profile']" [routerLinkActive] = "['active']" [routerLinkActiveOptions]="{exact:true}">Welcome John</a>
+              <a *ngIf="!authService.isAuthenticated()" [routerLink]=" ['user/login']"> Login </a>
+              <a [routerLink]="['/user/profile']" 
+                  [routerLinkActive] = "['active']" 
+                  [routerLinkActiveOptions]="{exact:true}"
+                  *ngIf="authService.isAuthenticated()">Welcome {{authService.currentUser.firstName}}</a>
             </li>
           </ul>
         </div>
